--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                       <h2>Irregular Cycles</h2>
 					  <p class="lead">the first app designed for women with polycystic ovary syndrome on the motherhood journey </p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                      <a data-scroll href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" class="btn btn-light btn-radius btn-brd">Now available for free from the App Store</a>
+                      <a data-scroll href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" class="btn btn-light btn-radius btn-brd">Download from the App Store</a>
                   </div>
                 </div>
                 <div class="app_iphone_01 wow slideInUp hidden-xs hidden-sm" data-wow-duration="1s" data-wow-delay="0.2s">
