--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129708567-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129708567-2');
+</script>
 
 </head>
 <body class="app_version" data-spy="scroll" data-target="#navbarApp" data-offset="98">
@@ -78,7 +87,7 @@
                       <h2>Irregular Cycles</h2>
 					  <p class="lead">the first app designed for women with polycystic ovary syndrome on the motherhood journey </p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                      <a data-scroll href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" class="btn btn-light btn-radius btn-brd">Download from the App Store</a>
+                                     <a href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" target="_blank" class="btn btn-light btn-radius btn-brd" data-scroll>Now available for free from the App Store</a>
                   </div>
                 </div>
                 <div class="app_iphone_01 wow slideInUp hidden-xs hidden-sm" data-wow-duration="1s" data-wow-delay="0.2s">
