--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
                       <h2>Irregular Cycles</h2>
 					  <p class="lead">the first app designed for women with polycystic ovary syndrome on the motherhood journey </p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                     <a href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" target="_blank" class="btn btn-light btn-radius btn-brd" data-scroll>Now available for free from the App Store</a>
+                                     <a href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" target="_blank"><img src="uploads/app-store-badge.png" width="256" height="256" alt=""/></a>
                   </div>
                 </div>
+          
                 <div class="app_iphone_01 wow slideInUp hidden-xs hidden-sm" data-wow-duration="1s" data-wow-delay="0.2s">
                     <img src="uploads/app_iphone_02.png" alt="" class="img-fluid">
                 </div>
