--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					<div class="phone-holder">
 					   <div id="fon"></div>
 					   <div class="hgh-linner hgi" data-index="0">
-							<img width="190" height="320" src="uploads/IMG_7366.png" class="attachment-highlight wp-post-image" alt="screen" />    
+							<img width="190" height="320" src="uploads/IMG_7366.PNG" class="attachment-highlight wp-post-image" alt="screen" />    
 						</div>
 						<div class="hgh-linner hgi" data-index="1">
 							<img width="234" height="398" src="uploads/IMG_7367.PNG" class="attachment-highlight wp-post-image" alt="screensdst" />    
