--- a/boot.html
+++ b/boot.html
@@ -10,6 +10,8 @@
 </script>
 <script>
 initBotXOChat({
+  width: 100%,
+   height: 100%,
   id: "48da1f22-3472-4fad-a601-8d7731dcbc00"
 });
 </script>
