--- a/boot.html
+++ b/boot.html
@@ -10,8 +10,8 @@
 </script>
 <script>
 initBotXOChat({
-  width: 100%,
-   height: 100%,
+  width: 400,
+   height: 600,
   id: "48da1f22-3472-4fad-a601-8d7731dcbc00"
 });
 </script>
