--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </nav>
     </header>
 
-<div id="home" class="parallax first-section" style="background-image:url('uploads/bg-img.jpg');">
+<div id="home" class="parallax first-section" style="background-image:url('uploads/bg-img-newest.jpg');">
 <div class="container">
       <div class="row">
                 <div class="col-md-6 col-sm-12">
@@ -117,7 +117,7 @@
 						<!-- .highlight .left-row -->
 
 						<li class="highlight lhgh" data-index="0">
-							<i class="flaticon-windows effect-1"></i>
+							<i class="flaticon-windows effect-1" ></i>
 							<div class="fl-inner">
 							  <h4>Log</h4>
 							  <p>Log symptoms, mood, medicine, and the quality of your sleep.</p>
@@ -171,21 +171,12 @@
         </div><!-- end container -->
     </div><!-- end section -->
               </div>
-
-<div class="how-its-work clearfix">
-  <div align="center"><a class="twitter-timeline" data-width="500" data-height="600" href="https://twitter.com/SpitLabAB?ref_src=twsrc%5Etfw">Tweets by SpitLabAB</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </div>
-      <span style="text-align: right"></span></div>
-    <!-- end section -->
-<!-- end section -->
-<!-- end section -->
-
-<!-- end section --><!-- end section -->
-
+<div class="videodiv">
+    <video src="videos/Irregular_Cycles_Video.mp4" autoplay loop controls type="video/mp4"></video>
+</div>
             </div><!-- end row -->
         </div><!-- end container -->
-    </div><!-- end section -->
+    </div>end section
 
 <section class="section nopad cac text-center">
         <a href="#"></a>
@@ -205,7 +196,7 @@
 
                         <ul class="footer-links">
                             <li><a href="mailto:#">Contact@spitlab.co</a></li>
-                            <li><a href="#">www.spitlab.co</a></li>
+                            <li><a href="#">spitlab.co</a></li>
                           
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
