--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 </div>
             </div><!-- end row -->
         </div><!-- end container -->
-    </div>end section
+    </div>
 
 <section class="section nopad cac text-center">
         <a href="#"></a>
