--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                       <h2>Irregular Cycles</h2>
 					  <p class="lead">the first app designed for women with polycystic ovary syndrome on the motherhood journey </p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                     <a href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" target="_blank"><img src="uploads/app-store-badge.png" width="256" height="256" alt=""/></a>
+                            <div>       <a href="https://apps.apple.com/se/app/irregular-cycles/id1478881592" target="_blank"><img src="uploads/app-store-badge.png" width="256" height="256" alt=""/></a></br>
+                                      <a><img src="images/store_button_googleplaystore.png" width="256" height="85" alt=""/></a>
+                                  </div>    
                   </div>
                 </div>
           
