--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div><!-- end section -->
               </div>
 <div class="videodiv">
-    <video src="videos/Irregular_Cycles_Video.mp4" autoplay loop controls type="video/mp4"></video>
+    <video src="videos/Irregular_Cycles_Video.mp4" autoplay loop controls type="video/mp4" autostart="false"></video>
 </div>
             </div><!-- end row -->
         </div><!-- end container -->
