--- a/index.html
+++ b/index.html
@@ -59,9 +59,23 @@
   src="https://www.facebook.com/tr?id=1768109076664990&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
+	
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MK6GD9L');</script>
+<!-- End Google Tag Manager -->
+	
 </head>
 <body class="app_version" data-spy="scroll" data-target="#navbarApp" data-offset="98">
 
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MK6GD9L"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	
     <!-- LOADER -->
     <!-- <div id="preloader">
         <img class="preloader" src="images/loaders/loader-app.gif" alt="">
